--- a/src/main/webapp/WEB-INF/views/layout/layouts.xml
+++ b/src/main/webapp/WEB-INF/views/layout/layouts.xml
@@ -12,29 +12,46 @@
 </definition>
 
 <!-- 관리자페이지 -->
-<definition name="mainLayout2" template="/WEB-INF/views/layout/layout-tiles2.jsp">
+<definition name="adminLayout" template="/WEB-INF/views/layout/layout-tiles2.jsp">
 	<put-attribute name="header" value="/WEB-INF/views/layout/header.jsp"/>
 	<put-attribute name="menu" value="/WEB-INF/views/layout/menu.jsp"/>
 	<put-attribute name="body" value=""/>
 	<put-attribute name="footer" value="/WEB-INF/views/layout/footer.jsp"/>
 </definition> 
 
+<!-- 로그인페이지 -->
+<definition name="loginLayout" template="/WEB-INF/views/layout/layout-tiles3.jsp">
+	<put-attribute name="body" value=""/>
+</definition> 
 
-<definition name="main" extends="mainLayout">
-	<put-attribute name="body" value="/WEB-INF/views/main.jsp"/>
+
+
+
+<!-- _______경로설정_______ -->
+
+<!-- 기본형태 경로설정 -->
+<definition name="*" extends="mainLayout">
+	<put-attribute name="body" value="/WEB-INF/views/{1}.jsp"/>
 </definition>
-<definition name=".*.*" extends="mainLayout">
+<definition name="*/*" extends="mainLayout">
 	<put-attribute name="body" value="/WEB-INF/views/{1}/{2}.jsp"/>
 </definition>
 <definition name=".*.*.*" extends="mainLayout">
 	<put-attribute name="body" value="/WEB-INF/views/{1}/{2}/{3}.jsp"/>
 </definition>
 
-<!-- 관리자페이지 -->
-<definition name="admin/*" extends="mainLayout2">
+<!-- 관리자페이지 경로설정 -->
+<definition name="admin/*" extends="adminLayout">
 	<put-attribute name="body" value="/WEB-INF/views/admin/{1}.jsp"/>
 </definition>
 
+<!-- 로그인페이지 경로설정 -->
+<definition name="login" extends="loginLayout">
+	<put-attribute name="body" value="/WEB-INF/views/login/login.jsp"/>
+</definition>
+<definition name="regi" extends="loginLayout">
+	<put-attribute name="body" value="/WEB-INF/views/login/regi.jsp"/>
+</definition>
 
 </tiles-definitions>
 
